yaml-examples/bitwarden/bitwarden-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bitwarden
spec:
  rules:
  - host: bitwarden.lan
    http:
      paths:
      - backend:
          service:
            name: bitwarden
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
